# ec2-metamock

./: .buildinfo  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree  installation.doctree
.github/workflows/: tests.yml
_sources/: index.rst.txt  installation.rst.txt
docs/: conf.py  index.rst
ec2_metamock/: __init__.py  app.py
ec2_metamock/services/: __init__.py  api.py  base.py
ec2_metamock/services/api/: __init__.py  root.py
ec2_metamock/services/metadata/: __init__.py  defaults.py  iam.py  placement.py  root.py  services.py
tests/: conftest.py  test_api.py  test_metadata.py  test_placement.py  test_services.py
