[tool.poetry]
name = "ec2-metamock"
version = "0.0.1"
description = "Another EC2 metadata service mock"
authors = ["Your Name <you@example.com>"]
license = "MIT"


[tool.poetry.scripts]
server = "ec2_metamock.app:run"

[tool.poetry.dependencies]
python = "^3.6"
bottle = "^0.12.18"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^5.4.3"
webTest = "^2.0.35"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
