[tool.poetry]
name = "ec2-metamock"
version = "0.0.1"
description = "Another EC2 metadata service mock"
authors = ["Your Name <you@example.com>"]
license = "MIT"


[tool.poetry.scripts]
server = "ec2_metamock.app:run"

[tool.poetry.dependencies]
python = "^3.6"
bottle = "^0.12.18"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
webTest = "^2.0.35"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
